[package]
name = "land_strider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
futures-util = "0.3.28"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utility = { path = "../utility" }
document = { path = "../document" }
tokio-stream = { version = "0.1.14", features = ["full"] }
jsonwebtoken = "8.3.0"
pwhash = "1.0.0"
config = "0.13.4"
secrecy = "0.8.0"
http-body-util = "0.1.1"
