[package]
name = "land_strider_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
bytes = "1.4.0"
futures = "0.3.28"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = "1.32.0"
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["io"] }
tracing = "0.1.37"
