[package]
name = "local_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
pwhash = "1"
age = "0.9.0"

[dev-dependencies]
fake = "2.5"
rand = "0.8"
