[package]
name = "local_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pwhash = "1"
age = "0.9.0"
lru = "0.9.0"
utility = { path = "../utility" }
document = { path = "../document" }
walkdir = "2.3.3"
tracing = "0.1.37"

[dev-dependencies]
fake = "2.5"
rand = "0.8"
serial_test = "1.0.0"
