[package]
name = "github-notifications"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["clipboard-all", "shell-open"] }
tokio = { version = "1.26.0", features = ["rt", "sync",  "macros", "time"] }
local_ledger = { path = "../local_ledger" }
passwords = "3.1.13"
dirs = "5.0.0"
zip = "0.6.4"
walkdir = "2.3.3"
reqwest = { version = "0.11.20", features = ["multipart", "stream"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utility = { path = "../utility" }
land_strider_sdk = { path = "../land_strider_sdk" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
